add final changes to new  repository
