# src/models/Cliente.js
@@ -1,23 +1,30 @@
 const { DataTypes } = require("sequelize");
 const sequelize = require("../database");
 
-const Cliente = sequelize.define("Cliente", {
-  nome: {
-    type: DataTypes.STRING,
-    allowNull: false,
-  },
-  email: {
-    type: DataTypes.STRING,
-    allowNull: false,
-    unique: true,
-    validate: {
-      isEmail: true,
+const Cliente = sequelize.define(
+  "Cliente",
+  {
+    nome: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    email: {
+      type: DataTypes.STRING,
+      allowNull: false,
+      unique: true,
+      validate: {
+        isEmail: true,
+      },
+    },
+    pedidoId: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      unique: true,
     },
   },
-  pedido: {
-    type: DataTypes.INTEGER,
-    allowNull: false,
-    unique: true,
-  },
-});
-return Cliente;
+  {
+    tableName: "clientes",
+  }
+);
+
+module.exports = Cliente;
