# src/models/Pedido.js
@@ -1,18 +1,6 @@
 const { DataTypes } = require("sequelize");
 const sequelize = require("../database");
-const Item = require("./Item");
 
-const Pedido = sequelize.define("Pedido", {
-  nome: {
-    type: DataTypes.STRING,
-    allowNull: false,
-  },
-});
-
-/* Pedido.belongsToMany(Item, {
-  through: "PedidoItems",
-  as: "Items",
-  foreignKey: "PedidoId",
-}); */
+const Pedido = sequelize.define("Pedido", {});
 
 module.exports = Pedido;
